--- a/public/views/browse/browse.html
+++ b/public/views/browse/browse.html
@@ -1,1 +1,1 @@
-<p class="md-display-2" style="margin: 20px 20px;">Browse</p>
+<p class="md-display-2" style="margin: 20px 20px;">Browse (Coming Soon)</p>
